# PCLink

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  FINAL_FIXES_SUMMARY.md  FIXES_SUMMARY.md  FLUTTER_PAIRING_GUIDE.md  LICENSE  LICENSE.AGPL  NOTICES  PAIRING_DIALOG_DUPLICATE_FIX.md  PAIRING_FIXES_SUMMARY.md  PKGBUILD  README.md  SECURITY.md  STARTUP_TROUBLESHOOTING.md  WINDOWS11_STARTUP_GUIDE.md  clear_devices.py  dev-setup.ps1  diagnose_issues.py  diagnose_pairing.py  force-purge-pclink.sh  git_diff_20251202_163210.patch  install.sh  media_check.py  nfpm.yaml  pclink_startup.bat  pclink_startup.ps1  pre-install-pclink.sh  pyproject.toml  requirements-dev.txt  requirements.txt  s.md  s.ps1  xyz.bytedz.PCLink.desktop
.github/: LICENSE_HEADER
.github/workflows/: main.yml
docs/: ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  QUICK_REFERENCE.md
docs/api/: README.md
docs/guide/: getting_started.md
scripts/: README.md  add_license_headers.py  build.py  build_fpm.py  build_nfpm.py  convert_icons.py  convert_tray_icons_to_ico.py  deps.json  generate_pkgbuild.py  generate_requirements.py  installer.iss  release.py  verify_docs.py  version_updater.py
scripts/linux/: pclink-power-wrapper  pclink-sudoers  pclink.1  pclink.service.template  test-power-permissions
scripts/windows/: pclink_service.py  service_install.bat  service_uninstall.bat
src/: __init__.py
src/pclink/: MANIFEST.in  __init__.py  __main__.py  headless.py  launcher.py  main.py
src/pclink/api_server/: api.py  applications_router.py  control_api.py  discovery.py  extension_router.py  file_browser.py  info_router.py  input_router.py  macro_router.py  media_router.py  media_streaming.py  middleware.py  phone_file_router.py  process_manager.py  services.py  services_router.py  system_router.py  terminal.py  transfer_router.py  transfers.py  utils_router.py  ws_manager.py
src/pclink/api_server/routers/: applications.py  auth.py  core_routes.py  dependencies.py  desktop_streaming.py  devices.py  extensions.py  file_browser.py  info.py  input.py  macros.py  media.py  media_streaming.py  mirror.py  pairing.py  phone_files.py  processes.py  server.py  services_management.py  system.py  terminal.py  transfers.py  utils.py  websocket_routes.py
src/pclink/api_server/transfers/: session.py  upload.py
src/pclink/core/: config.py  constants.py  controller.py  device_manager.py  exceptions.py  extension_base.py  extension_context.py  extension_manager.py  linux_notifier.py  logging.py  logging_config.py  security.py  server_controller.py  setup_guide.py  share_manager.py  singleton.py  startup.py  state.py  system_tray.py  update_checker.py  utils.py  validators.py  version.py  wayland_utils.py  web_auth.py  windows_console.py  windows_notifier.py
src/pclink/gui/: __init__.py  discovery_dialog.py  layout.py  localizations.py  main_window.py  theme.py  tray_manager.py  update_dialog.py  version_dialog.py  windows_notifier.py
src/pclink/services/: __init__.py  app_service.py  desktop_streaming_service.py  discovery_service.py  extension_service.py  file_service.py  input_service.py  linux_evdev_service.py  macro_service.py  media_service.py  mirror_service.py  process_service.py  system_service.py  terminal_service.py  transfer_service.py  utility_service.py
src/pclink/web_ui/: __init__.py  router.py
src/pclink/web_ui/static/: app.js  auth.html  auth.js  feather.min.js  index.html  style.css
src/pclink/web_ui/static/js/: core.js  desktop_streaming.js  devices.js  extensions.js  links.js  macros.js  mirror.js  phone.js  system.js
src/pclink/web_ui/templates/: auth.html  base.html
src/pclink/web_ui/templates/layout/: header.html  sidebar.html
src/pclink/web_ui/templates/modals/: batch_bar.html  confirm.html  ext_logs.html  factory_reset.html  macro_editor.html  pairing.html  permissions.html  side_panel.html  success_overlay.html
src/pclink/web_ui/templates/tabs/: about.html  access_control.html  dashboard.html  desktop_streaming.html  devices.html  extensions.html  guide.html  links_management.html  logs.html  macros.html  mirror.html  pairing.html  phone_files.html  settings.html
tests/: __init__.py  conftest.py
